k8sallowedrepos.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
        listKind: K8sAllowedReposList
        plural: k8sallowedrepos
        singular: k8sallowedrepos
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg, "details": {"missing": missing}}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, "harbor.fbclouddemo.us/")
          msg := sprintf("image '%v' comes from an unapproved registry", [container.image])
          missing := container.image
        }
