must-be-from-harbor.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: must-be-from-harbor
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
